Fixed Learn Mobile Layout 2nd line
and fixed box margins so doesn't stay squished when browser is made smaller.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -115,11 +115,7 @@ header .navbar .mobile {
         display: flex;
         flex: 1;
         flex-wrap: wrap;
-        flex-direction: column;
-        justify-items: center;
-        align-items: flex-start;
-        max-width: 100%;
-        margin: auto 5rem auto 1.3rem;
+        
     }
 
     .students-cta h1 {
@@ -128,6 +124,17 @@ header .navbar .mobile {
         color: black;
         opacity: 0.7;
         line-height: 1.4;
+        width: 100%;
+    }
+
+    .students-cta h4 {
+        font-size: 1.15rem;
+        font-weight: 500;
+        color: black;
+        opacity: 0.7;
+        line-height: 1.35;
+        margin-top: 1.7rem;
+        margin-bottom: 1.3rem;
         width: 100%;
     }
 
